<resources>
    <string name="app_name">BBFeeding</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_coupon">Coupons</string>
    <string name="time_passed_label">Time passed since the last feeding</string>
    <string name="reset_timing_label">Reset Timing</string>
    <string name="alarm_label">Alarm</string>
    <string name="alarm_interval_label">Interval</string>
    <string name="alarm_ringtone_label">Ringtone</string>
    <string name="alarm_type_label">Alarm Type</string>
    <string name="alarm_volumn_label">Volumn</string>
    <string name="start_timing_label">Start Timing</string>
    <string name="feed_button_label">Feed Now</string>
    <string name="reset_timing_check_dialog_content">Are you sure to reset current timing?</string>
    <string name="feeding_pattern_formula_label">Formula</string>
    <string name="feeding_pattern_breast_label">Breast-feeding</string>
    <string name="breast_left_label">Left</string>
    <string name="breast_right_label">Right</string>
    <string name="breast_interval_edittext_hint">(minite)</string>
    <string name="breast_side_label">Which Side:</string>
    <string name="breast_interval_label">Interval:</string>
    <string name="formula_intake_edittext_hint">(ml)</string>
    <string name="formula_intake_label">Intake:</string>
    <string name="last_breast_feeding_info_format">%1$02d:%2$02d, breast(%3$s), %4$s min</string>
    <string name="str_left">left</string>
    <string name="str_right">right</string>
    <string name="last_formula_feeding_info_format">%1$02d:%2$02d, formula, %3$s ml</string>
    <string name="last_feeding_info_default">Last Feeding Information: ...</string>
    <string name="alarm_interval_format">%1$02dh %2$02dmin</string>
    <string name="unit_hour">hour</string>
    <string name="unit_minute">minute</string>
    <string name="alarm_type_ring">Ring</string>
    <string name="alarm_type_vibra">Vibra</string>
    <string name="alarm_type_both">ring and vibra</string>
    <string name="slide_right_to_close_label">Slide to feed baby</string>
    <string name="history_item_breast_left">breast(left)</string>
    <string name="history_item_breast_right">breast(right)</string>
    <string name="history_item_formula">formula</string>
    <string name="history_item_breast_interval">%1$s min</string>
    <string name="history_item_formula_intake">%1$s ml</string>
    <string name="history_item_time">%1$02d:%2$02d</string>
    <string name="history_item_date">%1$d-%2$d-%3$d</string>
    <string name="no_history_label">No History</string>
    <string name="apk_web_url">https://play.google.com/store/apps/details?id=com.zeng.bbfeeding</string>
    <string name="share_title">Share to your friends!</string>
    <string name="coupon_page_url">http://store.xazeng.com/app/bbfeeding/</string>
    <string name="exit_toast">Click BACK again to EXIT.</string>
    <string name="web_error_info"><![CDATA[<p>Error Code: %1$d<br/>Error Info: %2$s</p><br/><p><b>Please check you network, then click refresh button on the top right corner.</b></p>]]></string>
    <string name="web_title_loading">loading...</string>
    <string name="active_external_app_note">Gonna active [%1$s].</string>
    <string name="privacy_title">服务协议和隐私政策</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="privacy_text"><![CDATA[<p>请你务必审慎阅读、充分理解“服务协议”和“隐私政策”各条款，包括但不限于：为了向你提供内容推荐、内容分享等服务，我们需要手机你的设备信息、操作日志等个人信息。你可以在“设置”中查看、变更、删除个人信息并管理你的授权。</p> <p>你可以阅读<a href="https://xazeng.github.io/app/bbfeeding/user_agreement.html">《服务协议》</a>和<a href="https://xazeng.github.io/app/bbfeeding/privacy_policy.html">《隐私政策》</a>了解详细信息。如你同意，请点击“同意”开始接受我们的服务。</p>]]></string>

</resources>
