<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/pattern_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeightSmall"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/breast_radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/feeding_pattern_button_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/feeding_pattern_breast_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/feeding_pattern_button_textcolor" />

        <RadioButton
            android:id="@+id/formula_radiobutton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/feeding_pattern_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/feeding_pattern_formula_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/feeding_pattern_button_textcolor" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="?attr/dialogPreferredPadding">

        <GridLayout
            android:id="@+id/breast_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/breast_side_label" />

            <RadioGroup
                android:id="@+id/breast_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/breast_left_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/breast_left_label" />

                <RadioButton
                    android:id="@+id/breast_right_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breast_right_label" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/breast_interval_label" />

            <EditText
                android:id="@+id/breast_interval_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/breast_interval_edittext_hint"
                android:inputType="number" />

        </GridLayout>

        <GridLayout
            android:id="@+id/formula_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/formula_intake_label" />

            <EditText
                android:id="@+id/formula_intake_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/formula_intake_edittext_hint"
                android:inputType="number" />

        </GridLayout>

    </RelativeLayout>

</LinearLayout>