<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:text="@string/time_passed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/feed_timer"
                    android:layout_gravity="center"
                    android:textSize="50sp"
                    android:format="00:00:00"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp" />

                <Button
                    android:text="@string/feed_button_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/feed_button"
                    android:textColor="@android:color/white"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@drawable/feed_button_background"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_marginBottom="8dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:padding="3dp"
                            android:visibility="gone"
                            android:text="@string/reset_timing_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/reset_timing_textview"
                            android:textColor="@drawable/operate_timing_button_textcolor"
                            android:background="@drawable/operate_timing_button_background"/>
                        <TextView
                            android:padding="3dp"
                            android:text="@string/start_timing_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/start_timing_textview"
                            android:textColor="@drawable/operate_timing_button_textcolor"
                            android:background="@drawable/operate_timing_button_background" />

                    </LinearLayout>

                    <TextView
                        android:text="@string/last_feeding_info_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/last_feeding_info_textview" />

                </RelativeLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm_label"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/alarm_switch"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TableLayout
                    android:id="@+id/alarm_setting_panel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_gray_1px_h"
                    android:dividerPadding="10dp"
                    android:paddingLeft="12dp"
                    android:showDividers="middle">

                    <LinearLayout
                        android:id="@+id/alarm_interval_panel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:paddingTop="3dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_interval_label" />

                        <TextView
                            android:id="@+id/alarm_interval_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="(interval)"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/alarm_type_panel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:paddingTop="3dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_type_label" />

                        <TextView
                            android:id="@+id/alarm_type_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="(type)"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/alarm_ringtone_panel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:orientation="vertical"
                        android:paddingLeft="12dp"
                        android:paddingTop="3dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_ringtone_label" />

                        <TextView
                            android:id="@+id/alarm_ringtone_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="(ringtone)"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="12dp"
                        android:paddingTop="8dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_volumn_label" />

                        <SeekBar
                            android:id="@+id/alarm_volumn_seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>


                </TableLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>




    </LinearLayout>
    
</ScrollView>